--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hegel-pedagogy-electron",
+  "name": "hegel-pedagogy-ai",
   "version": "1.0.0",
   "description": "Advanced Markdown editor and presentation app for Hegel Pedagogy AI",
   "main": "main.js",
@@ -24,6 +24,7 @@
     "@types/react-dom": "^19.1.6",
     "electron": "^32.3.3",
     "electron-builder": "^25.1.8",
+    "electron-reload": "^2.0.0-alpha.1",
     "tsx": "^4.20.3"
   },
   "build": {
@@ -43,13 +44,16 @@
       "lecture_summary.md"
     ],
     "mac": {
-      "category": "public.app-category.education"
+      "category": "public.app-category.education",
+      "icon": "build/icon.icns"
     },
     "win": {
-      "target": "nsis"
+      "target": "nsis",
+      "icon": "build/icon.ico"
     },
     "linux": {
-      "target": "AppImage"
+      "target": "AppImage",
+      "icon": "build/icon.png"
     }
   }
 }
