--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
       "preload.js",
       "index.html",
       "styles.css",
+      "services/**/*",
       "lectures/**/*",
       "texts/**/*",
       "sample-presentation.md",
