--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "electron": "electron .",
     "electron-dev": "electron . --dev",
     "build": "electron-builder",
-    "dist": "electron-builder --publish=never"
+    "dist": "electron-builder --publish=never",
+    "test": "jest",
+    "test:basic": "jest --testPathPattern=tests/unit --testNamePattern=basic",
+    "test:unit": "jest --testPathPattern=tests/unit",
+    "test:integration": "jest --testPathPattern=tests/integration",
+    "test:e2e": "playwright test",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@electron/remote": "^2.1.2",
@@ -27,7 +34,13 @@
     "electron": "^32.3.3",
     "electron-builder": "^25.1.8",
     "electron-reload": "^2.0.0-alpha.1",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "@playwright/test": "^1.40.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "@types/jest": "^29.5.8",
+    "playwright": "^1.40.0"
   },
   "build": {
     "appId": "com.hegel.pedagogy.electron",
