--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@electron/remote": "^2.1.2",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.523.0",
+    "marked": "^16.2.0",
     "monaco-editor": "^0.52.2",
     "node-fetch": "^3.3.2",
     "openai": "^4.76.1",
@@ -29,18 +30,18 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
+    "@types/jest": "^29.5.8",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "electron": "^32.3.3",
     "electron-builder": "^25.1.8",
     "electron-reload": "^2.0.0-alpha.1",
-    "tsx": "^4.20.3",
-    "@playwright/test": "^1.40.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "@types/jest": "^29.5.8",
-    "playwright": "^1.40.0"
+    "playwright": "^1.40.0",
+    "tsx": "^4.20.3"
   },
   "build": {
     "appId": "com.hegel.pedagogy.electron",
