--- a/package.json
+++ b/package.json
@@ -30,17 +30,18 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.0",
+    "@playwright/test": "^1.55.0",
     "@types/jest": "^29.5.8",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "axe-playwright": "^2.1.0",
     "electron": "^32.3.3",
     "electron-builder": "^25.1.8",
     "electron-reload": "^2.0.0-alpha.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
-    "playwright": "^1.40.0",
+    "playwright": "^1.55.0",
     "tsx": "^4.20.3"
   },
   "build": {
