Add Google Gemini AI provider with image generation support
Features implemented:
- Google Gemini provider with text and image input support
- OpenAI DALL-E image generation support
- Chat interface with image attachment (📷 button)
- Chat interface with AI image generation (🎨 button)
- Click-to-enlarge image display in chat
- Automatic image preview with remove buttons
- Image support for both Gemini (multimodal) and OpenAI providers

Technical details:
- Added @google/generative-ai dependency
- Implemented GeminiProvider with vision capabilities
- Enhanced OpenAIProvider with DALL-E image generation
- Added image handling functions to aiChat.js
- Updated chat UI with image attachment and generation buttons
- Added IPC handler for image generation requests

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@electron/remote": "^2.1.2",
+    "@google/generative-ai": "^0.24.1",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.523.0",
     "marked": "^16.2.0",
