Initial image generation via Google Gemini

--- a/.env.example
+++ b/.env.example
@@ -25,12 +25,17 @@ GROQ_MODEL=llama-3.1-70b-versatile  # Options: llama-3.1-70b-versatile, llama-3.
 OPENROUTER_API_KEY=sk-or-your-openrouter-key-here
 OPENROUTER_MODEL=anthropic/claude-3.5-sonnet  # Options: anthropic/claude-3.5-sonnet, openai/gpt-4, meta-llama/llama-3.1-70b-instruct
 
+# Google Gemini Configuration
+# Get your API key from: https://makersuite.google.com/app/apikey
+GOOGLE_API_KEY=your-google-api-key-here
+GOOGLE_MODEL=gemini-2.5-flash  # Options: gemini-2.5-flash-image-preview, gemini-2.5-flash, gemini-2.5-pro, gemini-1.5-flash, gemini-1.5-pro
+
 # ====================
 # AI Service Configuration
 # ====================
 
 # Default AI Provider (if multiple are configured)
-# Options: openai, anthropic, groq, openrouter
+# Options: openai, anthropic, gemini, groq, openrouter
 DEFAULT_AI_PROVIDER=openai
 
 # AI Response Settings
@@ -57,7 +62,7 @@ LOG_LEVEL=info
 
 # Priority order (if multiple providers are configured):
 # 1. The provider specified in DEFAULT_AI_PROVIDER
-# 2. First available provider in this order: openai, anthropic, groq, openrouter
+# 2. First available provider in this order: openai, anthropic, gemini, groq, openrouter
 
 # Model Selection:
 # - Each provider has a default model that will be used if not specified
@@ -67,6 +72,7 @@ LOG_LEVEL=info
 # Cost Considerations:
 # - OpenAI GPT-4: Higher cost, excellent quality
 # - Anthropic Claude: Competitive pricing, great for reasoning
+# - Google Gemini: Competitive pricing, multimodal capabilities
 # - Groq: Very fast inference, cost-effective
 # - OpenRouter: Access to multiple models, pay-per-use
 
