--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@electron/remote": "^2.1.2",
-    "@google/generative-ai": "^0.24.1",
+    "@google/genai": "^1.16.0",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.523.0",
     "marked": "^16.2.0",
