Various PDF related fixes.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "monaco-editor": "^0.52.2",
     "node-fetch": "^3.3.2",
     "openai": "^4.76.1",
+    "pdfjs-dist": "^5.4.54",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
